# pandoc

./: pandoc.cabal  pandoc.hs  stack.yaml
src/Text/: Pandoc.hs
src/Text/Pandoc/: Error.hs  Options.hs  Parsing.hs  Pretty.hs  Shared.hs
src/Text/Pandoc/Readers/: LaTeX.hs  Markdown.hs
src/Text/Pandoc/Writers/: HTML.hs  Shared.hs
